--- a/site/css/style.scss
+++ b/site/css/style.scss
@@ -392,6 +392,18 @@ label[for='features'] {
   }
 }
 
+.preview {
+  display:none;
+}
+
+.preview .response{
+  white-space: pre; 
+  word-break: break-word; 
+  min-height:50px;
+  max-height:300px;
+  overflow-y:scroll;
+}
+
 .help {
   font-size: small;
   text-align: center;
