--- a/site/css/style.scss
+++ b/site/css/style.scss
@@ -335,6 +335,20 @@ label[for='features'] {
   display: block;
 }
 
+.preview {
+  display:none;
+}
+
+.preview .response{
+  white-space: pre; 
+  word-break: break-word; 
+  min-height:50px;
+  max-height:300px;
+  overflow-y:scroll;
+  margin-bottom:10px;
+}
+
+
 .help {
   font-size: small;
   text-align: center;
